unpackaged/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product that is automatically selected on the quote.</description>
    <inlineHelpText>Sélectionnez le produit qui doit être automatiquement sélectionné dans le devis. Remarque : la règle de produit Type doit être définie sur « Sélection ».</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Actions</relationshipLabel>
    <relationshipName>ProductActions</relationshipName>
    <type>Lookup</type>
</CustomField>