unpackaged/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__ValueField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ValueField__c</fullName>
    <description>This field will be used instead of the Filter Value when compared with the Filter Field.</description>
    <inlineHelpText>Compare le Champ de filtrage avec ce champ au lieu de la Valeur de filtrage.</inlineHelpText>
    <label>Value Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>