unpackaged/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__ValueObject__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ValueObject__c</fullName>
    <description>The Salesforce Object that holds the Value Field,</description>
    <inlineHelpText>Sélectionnez l&#39;objet Salesforce dans lequel le Champ valeur est défini.</inlineHelpText>
    <label>Value Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Configuration Attributes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>